--- a/index.html
+++ b/index.html
@@ -361,11 +361,10 @@
         <div class="col-lg-2 col-6 footer-links" style="margin-top: 70px;">
           <h4 class="orange-color-light">Links Utilizáveis</h4>
           <ul>
-            <li><a href="#">O Music Box</a></li>
-            <li><a href="#">O Manguebeat</a></li>
-            <li><a href="#">Sobre nós</a></li>
+            <li><a href="#contador">O Contador de Visitantes</a></li>
+            <li><a href="#sobre">Sobre nós</a></li>
             <li><a href="https://faculdadesenacpe.edu.br/" target="_blank">Site Oficial</a></li>
-            <li><a href="#" target="_blank">Site Oficial Senac no Rec'N'Play</a></li>
+            <li><a href="#" target="_blank">Senac no Rec'n'Play</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-6 footer-links" style="margin-top: 70px;">
