Atualizações do nome Senac

--- a/index copy.html
+++ b/index copy.html
@@ -48,7 +48,7 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="#caixa-texto1">Início</a>
+                      <a class="nav-link" aria-current="page" href="#inicio">Início</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#contador">O Contador de Visitantes</a>
@@ -76,28 +76,42 @@
       <section>
         <!-- Início -->
         <section class="team">
-          <a name="caixa-texto1"></a>
-          <div class="container sobre-nos">
+          <a name="inicio"></a>
+          <div class="container sobre-nos ">
+            
+            <!-- <div class="section-header">
+              <h2>Início</h2>
+              <div class="cx cx-1"></div>
+            </div> -->
             <div class="caixa-contador-geral">
               <div class="caixa-texto1">
                 <div class="bemVindo">
-                  <h2>Seja Bem-vindx ao</h2>
+                  <p>SEJA BEM-VINDO AO</p>
                 </div>
-                <svg viewBox="0 0 2500 600" style="
-                height: 200px;" >
-                  <!-- Symbol-->
-                  <symbol id="s-text">
-                    <text text-anchor="middle" x="50%" y="50%" dy=".35em">Espaço Senac</text>
-                  </symbol>
-                  <!-- Duplicate symbols-->
-                  <use class="text" xlink:href="#s-text"></use>
-                  <use class="text" xlink:href="#s-text"></use>
-                  <use class="text" xlink:href="#s-text"></use>
-                  <use class="text" xlink:href="#s-text"></use>
-                  <use class="text" xlink:href="#s-text"></use>
-                </svg>
+                <div class="nome-preenchivel">
+                  <svg viewBox="0 0 1200 600">
+                    <!-- Symbol-->
+                    <symbol id="s-text">
+                      <text text-anchor="middle" x="50%" y="50%" dy=".35em">Espaço Senac</text>
+                    </symbol>
+                    <!-- Duplicate symbols-->
+                    <use class="text" xlink:href="#s-text"></use>
+                    <use class="text" xlink:href="#s-text"></use>
+                    <use class="text" xlink:href="#s-text"></use>
+                    <use class="text" xlink:href="#s-text"></use>
+                    <use class="text" xlink:href="#s-text"></use>
+                  </svg>
+                </div>
               </div>
               
+              <div class="caixa-textoNum">
+                <div class="row-cols-lg-3">
+                  <p>PASSARAM POR AQUI</p>
+                </div>
+                <div class="row-cols-lg-8">
+                  <p>300</p>
+                </div>
+              </div>
             </div>
         </div>
         </section>
