Ajustes nas imagens

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <img src="./assets/Imagens/Carrossel/Trabalhando (5).jpeg" alt="Protótipo" class="d-block">
                       </div>
                       <div class="carousel-item">
-                        <video width="340px" controls src="../assets/Imagens/Carrossel/WhatsApp Video 2022-11-04 at 20.04.55.mp4" class="d-block" alt="Vídeo de testes" type="video/mp4" muted autoplay loop>
+                        <video width="340px" controls src="../assets/Imagens/Carrossel/WhatsApp Video 2022-11-04 at 20.04.55.mp4" class="d-block" height="900px" alt="Vídeo de testes" type="video/mp4" muted autoplay loop>
                         </video>
                         </div>
 
