--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                       <button type="button" data-bs-target="#demo" data-bs-slide-to="8"></button>
                       <button type="button" data-bs-target="#demo" data-bs-slide-to="9"></button>
                       <button type="button" data-bs-target="#demo" data-bs-slide-to="10"></button>
+                      <button type="button" data-bs-target="#demo" data-bs-slide-to="11"></button>
                     </div>
 
                     <!-- The slideshow/carousel -->
@@ -175,6 +176,9 @@
                       </div>
                       <div class="carousel-item">
                         <img src="./assets/Imagens/Carrossel/Trabalhando (5).jpeg" alt="Protótipo" class="d-block">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./assets/Imagens/Carrossel/Trabalhando (6).jpeg" alt="Protótipo" class="d-block">
                       </div>
                       <div class="carousel-item">
                         <video width="340px" controls src="../assets/Imagens/Carrossel/WhatsApp Video 2022-11-04 at 20.04.55.mp4" class="d-block" height="900px" alt="Vídeo de testes" type="video/mp4" muted autoplay loop>
