Atualização do link pro site geral

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                       <a class="nav-link" href="#sobre">Sobre nós</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Senac no Rec'n'Play 2022 - Projetos</a>
+                      <a class="nav-link" href="https://site-geral-senacno-recnplay.netlify.app/">Senac no Rec'n'Play 2022 - Projetos</a>
                     </li>
                   </ul>
                 </div>
@@ -440,7 +440,7 @@
             <li><a href="#contador">O Contador de Visitantes</a></li>
             <li><a href="#sobre">Sobre nós</a></li>
             <li><a href="https://faculdadesenacpe.edu.br/" target="_blank">Site Oficial</a></li>
-            <li><a href="#" target="_blank">Senac no Rec'n'Play</a></li>
+            <li><a href="https://site-geral-senacno-recnplay.netlify.app/" target="_blank">Senac no Rec'n'Play</a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-6 footer-links" style="margin-top: 70px;">
