Atualização do site geral

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img src="./assets/Imagens/Contador_Visitantes_Logo-Branca.png" alt="Bootstrap" width="130px">
                   </a>
                   <div class="d-flex flex-row">
-                    <a class="p-2" href="https://recnplay.pe/" target="_blank">
+                    <a class="p-2" href="https://site-geral-senacno-recnplay.netlify.app/" target="_blank">
                       <img src="./assets/Imagens/Senac no Rec'n'Play 2022.png" width="130px">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
