Atualização dos links

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                       <a class="nav-link" href="#sobre">Sobre nós</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="https://site-geral-senacno-recnplay.netlify.app/">Senac no Rec'n'Play 2022 - Projetos</a>
+                      <a class="nav-link" href="https://site-geral-senacno-recnplay.netlify.app/" target="_blank">Senac no Rec'n'Play 2022 - Projetos</a>
                     </li>
                   </ul>
                 </div>
@@ -243,7 +243,7 @@
       
                 <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
                   <div class="memberNew">
-                    <img src="./assets/Imagens/Membros/user.png" alt="">
+                    <img src="./assets/Imagens/Membros/Davi.png" alt="">
                     <h4>Davi Freitas</h4>
                     <span>Front-End Developer/Tester</span>
                     <div class="social">
