Atualizações dos membros

--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
                   <div class="memberNew">
                     <img src="./assets/Imagens/Membros/Davi.png" alt="">
                     <h4>Davi Freitas</h4>
-                    <span>Front-End Developer/Tester</span>
+                    <span>Back-end Developer</span>
                     <div class="social">
-                      <a href="#" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="#"><i class="bi bi-instagram" target="_blank"></i></a>
-                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="https://github.com/daviifreitas" target="_blank"><i class="bi bi-github"></i></a>
+                      <a href="https://www.instagram.com/isdavifreitas/"><i class="bi bi-instagram" target="_blank"></i></a>
+                      <a href="https://www.linkedin.com/in/davi-freitas-942417215/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -258,11 +258,11 @@
                   <div class="memberNew">
                     <img src="./assets/Imagens/Membros/David.jpeg" alt="">
                     <h4>David Montenegro</h4>
-                    <span>Front-End Developer</span>
+                    <span>Back-End Developer</span>
                     <div class="social">
                       <a href="#" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="https://www.instagram.com/david_m0ntenegr0/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="https://www.linkedin.com/in/david-montenegro-16825b1b5/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -271,7 +271,7 @@
                   <div class="memberNew">
                     <img src="./assets/Imagens/Membros/Elias.jpg" alt="">
                     <h4>Elias Kevyn</h4>
-                    <span>Front-End Developer</span>
+                    <span>Back-End Developer</span>
                     <div class="social">
                       <a href="#" target="_blank"><i class="bi bi-github"></i></a>
                       <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
@@ -284,10 +284,10 @@
                   <div class="memberNew">
                     <img src="./assets/Imagens/Membros/Francyelle.png" alt="">
                     <h4>Francyelle Azevedo</h4>
-                    <span>Front-End Developer</span>
+                    <span>Back-End Developer</span>
                     <div class="social">
                       <a href="#" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="https://www.instagram.com/francyelle.30/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
                       <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
@@ -297,11 +297,11 @@
                   <div class="memberNew">
                     <img src="./assets/Imagens/Membros/Gabriela.png" alt="">
                     <h4>Gabriela Maria</h4>
-                    <span>Front-End Developer</span>
+                    <span>Back-End Developer</span>
                     <div class="social">
                       <a href="#" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="https://www.instagram.com/souzagab2/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="https://www.linkedin.com/in/gabriela-souza-06a9391b1/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -324,11 +324,11 @@
                   <div class="memberNew">
                     <img src="./assets/Imagens/Membros/Hugo.png" alt="">
                     <h4>Hugo Antunes</h4>
-                    <span>Front-End Developer</span>
+                    <span>Back-End Developer</span>
                     <div class="social">
-                      <a href="#" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="https://github.com/HugoAntt" target="_blank"><i class="bi bi-github"></i></a>
+                      <a href="https://www.instagram.com/hugoseilant/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="https://www.linkedin.com/in/hugo-antunes-da-silva/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -337,10 +337,10 @@
                   <div class="memberNew">
                     <img src="./assets/Imagens/Membros/Izabelly.png" alt="">
                     <h4>Izabelly Tainan</h4>
-                    <span>Front-End Developer</span>
+                    <span>Back-End Developer</span>
                     <div class="social">
                       <a href="#" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="https://www.instagram.com/tainan_bella/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
                       <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
@@ -363,7 +363,7 @@
                   <div class="memberNew">
                     <img src="./assets/Imagens/Membros/Maiara.png" alt="">
                     <h4>Maiara Evelyn</h4>
-                    <span>Front-End Developer</span>
+                    <span>Back-End Developer</span>
                     <div class="social">
                       <a href="#" target="_blank"><i class="bi bi-github"></i></a>
                       <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
@@ -376,7 +376,7 @@
                   <div class="memberNew">
                     <img src="./assets/Imagens/Membros/Matheus.png" alt="">
                     <h4>Matheus Santana</h4>
-                    <span>Front-End Developer</span>
+                    <span>Back-End Developer</span>
                     <div class="social">
                       <a href="https://github.com/matheusfsantana/" target="_blank"><i class="bi bi-github"></i></a>
                       <a href="#"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
@@ -402,7 +402,7 @@
                   <div class="memberNew">
                     <img src="./assets/Imagens/Membros/Thiago.png" alt="">
                     <h4>Thiago Brito</h4>
-                    <span>Front-End Developer</span>
+                    <span>Front-End Developer/Team Leader</span>
                     <div class="social">
                       <a href="https://github.com/BritoThiag0" target="_blank"><i class="bi bi-github"></i></a>
                       <a href="https://www.instagram.com/thiagobrito03/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
