redes sociais adicionadas

--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
                     <h4>Francyelle Azevedo</h4>
                     <span>Back-End Developer</span>
                     <div class="social">
-                      <a href="#" target="_blank"><i class="bi bi-github"></i></a>
+                      <a href="https://github.com/Francyelleazevedo" target="_blank"><i class="bi bi-github"></i></a>
                       <a href="https://www.instagram.com/francyelle.30/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="https://www.linkedin.com/in/francyelle-azevedo-2a6727206/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -299,7 +299,7 @@
                     <h4>Gabriela Maria</h4>
                     <span>Back-End Developer</span>
                     <div class="social">
-                      <a href="#" target="_blank"><i class="bi bi-github"></i></a>
+                      <a href="https://github.com/GabrielaSouza2" target="_blank"><i class="bi bi-github"></i></a>
                       <a href="https://www.instagram.com/souzagab2/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
                       <a href="https://www.linkedin.com/in/gabriela-souza-06a9391b1/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
@@ -340,8 +340,8 @@
                     <span>Back-End Developer</span>
                     <div class="social">
                       <a href="#" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="https://www.instagram.com/tainan_bella/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="https://www.instagram.com/izabelly_tainan/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="https://www.linkedin.com/in/izabelly-tainan-60b340249/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -352,9 +352,9 @@
                     <h4>Lacê Renê</h4>
                     <span>Front-End Developer</span>
                     <div class="social">
-                      <a href="#" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="https://github.com/rennegomes" target="_blank"><i class="bi bi-github"></i></a>
+                      <a href="https://www.instagram.com/renne_gommes/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="https://www.linkedin.com/in/ren%C3%AA-gomes-91b85a1a0/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -391,9 +391,9 @@
                     <h4>Ranyelle dos Santos</h4>
                     <span>Front-End Developer</span>
                     <div class="social">
-                      <a href="#" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="https://github.com/ranyalbqrq" target="_blank"><i class="bi bi-github"></i></a>
+                      <a href="https://www.instagram.com/ranyalbqrq/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="https://www.linkedin.com/in/rany-santos-5b0b7819b/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
