--- a/index.html
+++ b/index.html
@@ -100,13 +100,9 @@
               <div class="caixa-textoNum">
                 <h3>Passaram por aqui</h3>
                 <ul class="c-rainbow">
-                  <li class="c-rainbow__layer c-rainbow__layer--white">0</li>
-                  <!-- <li class="c-rainbow__layer c-rainbow__layer--orange">0</li>
-                  <li class="c-rainbow__layer c-rainbow__layer--red">0</li>
-                  <li class="c-rainbow__layer c-rainbow__layer--violet">0</li>
-                  <li class="c-rainbow__layer c-rainbow__layer--blue">0</li>
-                  <li class="c-rainbow__layer c-rainbow__layer--green">0</li>
-                  <li class="c-rainbow__layer c-rainbow__layer--yellow">0</li> -->
+                  <div id="teste" class="c-rainbow">
+                      
+                  </div>
                  </ul>
               </div>
               
@@ -286,9 +282,9 @@
                     <h4>Francyelle Azevedo</h4>
                     <span>Back-End Developer</span>
                     <div class="social">
-                      <a href="https://github.com/Francyelleazevedo" target="_blank"><i class="bi bi-github"></i></a>
+                      <a href="#" target="_blank"><i class="bi bi-github"></i></a>
                       <a href="https://www.instagram.com/francyelle.30/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="https://www.linkedin.com/in/francyelle-azevedo-2a6727206/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -299,7 +295,7 @@
                     <h4>Gabriela Maria</h4>
                     <span>Back-End Developer</span>
                     <div class="social">
-                      <a href="https://github.com/GabrielaSouza2" target="_blank"><i class="bi bi-github"></i></a>
+                      <a href="#" target="_blank"><i class="bi bi-github"></i></a>
                       <a href="https://www.instagram.com/souzagab2/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
                       <a href="https://www.linkedin.com/in/gabriela-souza-06a9391b1/" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
@@ -340,8 +336,8 @@
                     <span>Back-End Developer</span>
                     <div class="social">
                       <a href="#" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="https://www.instagram.com/izabelly_tainan/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="https://www.linkedin.com/in/izabelly-tainan-60b340249/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="https://www.instagram.com/tainan_bella/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -352,9 +348,9 @@
                     <h4>Lacê Renê</h4>
                     <span>Front-End Developer</span>
                     <div class="social">
-                      <a href="https://github.com/rennegomes" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="https://www.instagram.com/renne_gommes/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="https://www.linkedin.com/in/ren%C3%AA-gomes-91b85a1a0/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="#" target="_blank"><i class="bi bi-github"></i></a>
+                      <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -391,9 +387,9 @@
                     <h4>Ranyelle dos Santos</h4>
                     <span>Front-End Developer</span>
                     <div class="social">
-                      <a href="https://github.com/ranyalbqrq" target="_blank"><i class="bi bi-github"></i></a>
-                      <a href="https://www.instagram.com/ranyalbqrq/" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
-                      <a href="https://www.linkedin.com/in/rany-santos-5b0b7819b/" target="_blank"><i class="bi bi-linkedin"></i></a>
+                      <a href="#" target="_blank"><i class="bi bi-github"></i></a>
+                      <a href="#" target="_blank"><i class="bi bi-instagram"></i></a> <!-- Perguntar se quer -->
+                      <a href="#" target="_blank"><i class="bi bi-linkedin"></i></a>
                     </div>
                   </div>
                 </div><!-- End Team Member -->
@@ -489,4 +485,18 @@
     <!-- Template Javascript -->
     <script src="./assets/js/main.js"></script>
 </body>
+
+<script>
+  setInterval(function(){
+    $.ajax({
+      url : "https://apicountrecnplay.azurewebsites.net/register/getdata",
+      success: function(resultAsJson){
+        var amountOfVisitors = resultASJson.Amount;
+        var htmlForUpdate = '<li class="c-rainbow_layer c-rainbow_layer--white">'+amountOfVisitors+'</li>';
+        $('#teste').html(htmlForUpdate);
+      }
+    })
+  },5000)
+</script>
+
 </html>
